--- a/index.html
+++ b/index.html
@@ -31,7 +31,26 @@
             </div>
         </div>
     </section>
-    <section class="portfolio">
+    <section class="aboutMe">
+        <div class="container">
+            <div class="sectionTitle">
+                <span>FEATURE</span>
+                <h1>About Me</h1>
+            </div>
+            <div class="row">
+                <div class="col-6" id="forPhoto">
+                    <img src="./assets/images/Photo.jpg" alt="">
+                </div>
+                <div class="col-6" id="forAbout">
+                    <p>I'm Loghman Alizada. I was born on February 16, 2002
+                        I am currently studying for a bachelor's degree in computer science at the Azerbaijan Technical University.
+                        My main field of interest was Web Design and also UI & UX.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="myWork">
         <div class="container">
             <div class="sectionTitle">
                 <span>FEATURE</span>
@@ -39,11 +58,47 @@
             </div>
             <div class="row">
                 <div class="col-4" id="forCard">
+                    <h3>UX/UI</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, a dignissimos. Enim eaque fugiat nostrum ea obcaecati quasi vitae, ipsa nam aliquid repellat!</p>
                 </div>
-                <div class="col-4" id="forCard"></div>
-                <div class="col-4" id="forCard"></div>
+                <div class="col-4" id="forCard">
+                    <h3>FRONTEND</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, a dignissimos. Enim eaque fugiat nostrum ea obcaecati quasi vitae, ipsa nam aliquid repellat!</p>
+                </div>
+                <div class="col-4" id="forCard">
+                    <h3>BACKEND</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, a dignissimos. Enim eaque fugiat nostrum ea obcaecati quasi vitae, ipsa nam aliquid repellat!</p>
+                </div>
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-4" id="contact">
+                    <h5>Email Me</h5>
+                    <span>loghmanalizada@gmail.com</span>
+                </div>
+                <div class="col-4" id="contact">
+                    <h5>Call me</h5>
+                    <span>+994 50 357 88 74</span>
+                </div>
+                <div class="col-4" id="contact">
+                    <h5>Adress</h5>
+                    <span>Baku, Azerbaijan</span>
+                </div>
+            </div>
+        </div>
+        <div class="forEnd">
+                <div class="copyright">
+                    <span>© Copyright 2022 - Loghman Alizada</span>
+                </div>
+                <div class="socialMedia">
+                    <a href="https://www.linkedin.com/in/loghman-alizada-08336b233/"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://github.com/LoghmanAlizada"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.behance.net/"><i class="fa-brands fa-behance"></i></a>
+                </div>
+        </div>
+    </footer>
 </body>
 </html>
