--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="forhero">
                 <span>-HELLO, WELCOME TO MY PERSONAL WEBSITE</span>
                 <h1>I'm Loghman Alizada</h1>
-                <h1 id="underline">I'm Software Developer and UI/UX Designer</h1>
+                <h1 id="underline">I'm Frontend Developer</h1>
             </div>
         </div>
     </section>
@@ -42,32 +42,30 @@
                     <img src="./assets/images/Photo.jpg" alt="">
                 </div>
                 <div class="col-6" id="forAbout">
+                    <br>
                     <p>I'm Loghman Alizada. I was born on February 16, 2002
                         I am currently studying for a bachelor's degree in computer science at the Azerbaijan Technical University.
                         My main field of interest was Web Design and also UI & UX.
                     </p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="myWork">
-        <div class="container">
-            <div class="sectionTitle">
-                <span>FEATURE</span>
-                <h1>What I Do</h1>
-            </div>
-            <div class="row">
-                <div class="col-4" id="forCard">
-                    <h3>UX/UI</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, a dignissimos. Enim eaque fugiat nostrum ea obcaecati quasi vitae, ipsa nam aliquid repellat!</p>
-                </div>
-                <div class="col-4" id="forCard">
-                    <h3>FRONTEND</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, a dignissimos. Enim eaque fugiat nostrum ea obcaecati quasi vitae, ipsa nam aliquid repellat!</p>
-                </div>
-                <div class="col-4" id="forCard">
-                    <h3>BACKEND</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, a dignissimos. Enim eaque fugiat nostrum ea obcaecati quasi vitae, ipsa nam aliquid repellat!</p>
+                    <br/>
+                    <div class="foreducation">
+                        <h2>Education</h2>
+                        <div class="myeducation">
+                            <h4>Baku State University</h4>
+                            <p>- Bachelor's degree, Computer Science</p>
+                            <p>2019/09 - 2020/02</p>
+                        </div>
+                        <div class="myeducation">
+                            <h4>Azerbaijan Technical University</h4>
+                            <p>- Bachelor's degree, Computer Science</p>
+                            <p>2020/03 - present</p>
+                        </div>
+                        <div class="myeducation">
+                            <h4>Code Academy</h4>
+                            <p>- Student, Software Development</p>
+                            <p>2022/02 - 2022/08</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
